--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ https://www.tooplate.com/view/2115-marvel
 	<div class="container mt-5">
 		<div class="row">
 		  <div class="col-md-6">
-			<img src="images/WhatsApp Image 2023-09-01 at 8.18.16 PM.png" alt="Imagen de Joaquín Noble" class="img-fluid">
+			<img src="images/WhatsApp Image 2024-12-02 at 3.20.20 PM.jpeg" alt="Imagen de Joaquín Noble" class="img-fluid">
 		  </div>
 		  <div class="col-md-6">
 			<h2>Soy Joaquín Noble</h2>
@@ -133,8 +133,6 @@ https://www.tooplate.com/view/2115-marvel
 			<p>También me dedico a la creación de diseños gráficos que potencian la identidad de tu marca. Desde la elaboración de publicidades y estrategias de marketing digital hasta la creación de logos y iconos únicos, estoy comprometido en dar vida a tus ideas y ayudarte a destacar en un mundo visualmente competitivo.</p>
 
 			<p> soy un DJ experimentado, mezclo música para crear experiencias inolvidables. Mi discoteca ofrece un ambiente único con luces deslumbrantes, una mesa de DJ profesional, efectos láser impresionantes y una máquina de humo que añade un toque mágico a cada evento.</p>
-			<a href=   "https://wa.me/59896107885?text=Hola,me contacto por tu sitio web." target="_blank" class="btn btn-primary mr-2">¡Contáctame!</a>
-			<a href="https://magical-peony-f2770f.netlify.app" target="_blank" class="btn btn-secondary">Ver Discoteca</a>
 
 		</div>
 
